--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,33 +1,36 @@
-version: '2'
+version: "2"
 services:
-    webdriverio:
-        build: .
-        image: huli/webdriverio
-        depends_on:
-            - chrome
-            - firefox
-        volumes:
-            - /test:/test
+  test:
+    container_name: test
+    build: .
+    ports:
+      - "3000:3000"
+    depends_on:
+      - firefox
+      - chrome
+    volumes:
+      - ./test:/test
+      - ./package.json:/package.json
+      - ./package-lock.json:/package-lock.json
 
-    hub:
-        image: selenium/hub
-        ports:
-            - 4444:4444
+  firefox:
+    image: selenium/node-firefox:3.12.0-americium
+    shm_size: 2g
+    depends_on:
+      - hub
+    environment:
+      HUB_HOST: hub
 
-    firefox:
-        image: selenium/node-firefox
-        ports:
-            - 5900
-        environment:
-            - HUB_PORT_4444_TCP_ADDR=hub
-        depends_on:
-            - hub
+  chrome:
+    image: selenium/node-chrome:3.12.0-americium
+    shm_size: 2g
+    depends_on:
+      - hub
+    environment:
+      HUB_HOST: hub
 
-    chrome:
-        image: selenium/node-chrome
-        ports:
-            - 5900
-        environment:
-            - HUB_PORT_4444_TCP_ADDR=hub
-        depends_on:
-            - hub
+  hub:
+    container_name: hub
+    image: selenium/hub:3.12.0-americium
+    ports:
+      - "4444:4444"
