--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "qawdio",
   "version": "1.0.0",
-  "description": "",
+  "description": "wdio test",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erolstt/react-e2e-wdio.git"
+  },
   "main": "index.js",
   "scripts": {
     "test": "./node_modules/.bin/wdio ./test/wdio.conf.js"
