--- a/Dockerfilejjg
+++ b/Dockerfilejjg
@@ -1,27 +1,47 @@
-FROM node:9.4.0
-
-RUN npm install -g \
-    npm@latest \
-  # Clean up obsolete files:
-  && rm -rf \
-    /tmp/* \
-    /root/.npm
-
-WORKDIR /usr/lib/wdio
-COPY package.json package-lock.json ./
-RUN npm install \
-  # Clean up obsolete files:
-  && rm -rf \
-    /tmp/* \
-    /root/.npm
-RUN mkdir test
-
-COPY ./test /test
-# Set NODE_PATH to be able to require installed packages:
-#ENV NODE_PATH=/usr/lib/wdio/node_modules
-# Extend path to be able to run installed binaries:
-#ENV PATH=$PATH:/usr/lib/wdio/node_modules/.bin
-
-# Avoid permission issues with host mounts by assigning a user/group with
-# uid/gid 1000 (usually the ID of the first user account on GNU/Linux):
-#RUN adduser -D -u 1000 wdio
+{
+  "name": "qawdio",
+  "version": "1.0.0",
+  "description": "wdio test",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/erolstt/react-e2e-wdio.git"
+  },
+  "main": "index.js",
+  "scripts": {
+    "test": "./node_modules/.bin/wdio ./wdio.conf.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "allure-commandline": "^2.5.0",
+    "chai": "^4.1.2",
+    "chromedriver": "^2.37.0",
+    "dotenv": "^5.0.1",
+    "eslint": "^4.19.1",
+    "eslint-plugin-prettier": "^2.6.0",
+    "expect": "^22.4.3",
+    "mocha": "^6.2.2",
+    "prettier": "^1.12.1",
+    "webdriverio": "^5.3.5",
+    "yargs": "^11.0.0"
+  },
+  "devDependencies": {
+    "@wdio/allure-reporter": "^5.3.4",
+    "@wdio/cli": "^5.3.5",
+    "@wdio/jasmine-framework": "^5.3.2",
+    "@wdio/junit-reporter": "^5.3.1",
+    "@wdio/local-runner": "^5.3.5",
+    "@wdio/sauce-service": "^5.3.2",
+    "@wdio/selenium-standalone-service": "^5.2.2",
+    "@wdio/spec-reporter": "^5.2.3",
+    "@wdio/sync": "^5.3.2",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "shx": "^0.2.2",
+    "wdio-mocha-framework": "^0.6.4",
+    "wdio-screenshots-cleanup-service": "0.0.7"
+  }
+}
