--- a/package.json
+++ b/package.json
@@ -8,38 +8,18 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/wdio ./wdio.conf.js"
+    "test": "./node_modules/.bin/wdio ./test/wdio.conf.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "allure-commandline": "^2.5.0",
-    "chai": "^4.1.2",
-    "chromedriver": "^2.37.0",
-    "dotenv": "^5.0.1",
-    "eslint": "^4.19.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "expect": "^22.4.3",
-    "prettier": "^1.12.1",
-    "webdriverio": "^5.3.5",
-    "yargs": "^11.0.0"
-  },
   "devDependencies": {
-    "@wdio/allure-reporter": "^5.3.4",
-    "@wdio/cli": "^5.3.5",
-    "@wdio/jasmine-framework": "^5.3.2",
-    "@wdio/junit-reporter": "^5.3.1",
-    "@wdio/local-runner": "^5.3.5",
-    "@wdio/sauce-service": "^5.3.2",
-    "@wdio/selenium-standalone-service": "^5.2.2",
-    "@wdio/spec-reporter": "^5.2.3",
-    "@wdio/sync": "^5.3.2",
-    "eslint-config-standard": "^11.0.0",
-    "eslint-plugin-import": "^2.11.0",
-    "eslint-plugin-node": "^6.0.1",
-    "eslint-plugin-promise": "^3.7.0",
-    "eslint-plugin-standard": "^3.1.0",
-    "shx": "^0.2.2",
-    "wdio-screenshots-cleanup-service": "0.0.7"
+    "@wdio/cli": "^5.16.15",
+    "@wdio/local-runner": "^5.16.15",
+    "@wdio/mocha-framework": "^5.16.15",
+    "@wdio/selenium-standalone-service": "^5.16.10",
+    "@wdio/spec-reporter": "^5.16.11",
+    "@wdio/sync": "^5.16.15",
+    "chromedriver": "^79.0.0",
+    "wdio-chromedriver-service": "^5.0.2"
   }
 }
