--- a/package.json
+++ b/package.json
@@ -8,17 +8,19 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/wdio ./test/wdio.conf.js"
+    "test": "./node_modules/.bin/wdio ./test/wdio.conf.js  || exit 0 && ./node_modules/.bin/allure generate ./test/reports/allure-results"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@wdio/allure-reporter": "^5.16.16",
     "@wdio/cli": "^5.16.15",
     "@wdio/local-runner": "^5.16.15",
     "@wdio/mocha-framework": "^5.16.15",
     "@wdio/selenium-standalone-service": "^5.16.10",
     "@wdio/spec-reporter": "^5.16.11",
     "@wdio/sync": "^5.16.15",
+    "allure-commandline": "^2.13.0",
     "chromedriver": "^79.0.0",
     "wdio-chromedriver-service": "^5.0.2"
   }
