--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - firefox
       - chrome
       - hub
+      - allure
     command:
           bash -c "./wait-for-it.sh --timeout=0 hub:4444 && 
           ./wait-for-it.sh --timeout=0 firefox:5555 && 
@@ -43,11 +44,10 @@ services:
 
   allure:
     image: "frankescobar/allure-docker-service"
+    container_name: allure
     environment:
       CHECK_RESULTS_EVERY_SECONDS: 1
       KEEP_HISTORY: "TRUE"
     ports:
       - "4040:4040"
       - "5050:5050"
-    volumes: 
-      - ./allure-report:/app/allure-results
